--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p class="mb-3 notyellow">Our interior design service specializes in staging homes for realtors with
                         efficiency, class, and chic elegance. We transform spaces into captivating, sellable homes,
                         ensuring every detail reflects sophistication and style to attract discerning buyers.</p>
-                    <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#!">Contact Us Today!</a>
+                    <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="https://amareth05.github.io/professional-web/store.html">Contact Us Today!</a>
                     </div>
                 </div>
             </div>
